--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "Filter out a list of sensitive words",
   "main": "build/index.js",
   "scripts": {
+    "build": "babel src -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "babel": {
+    "presets": [
+      "latest"
+    ]
   },
   "repository": {
     "type": "git",
@@ -21,5 +27,9 @@
   "bugs": {
     "url": "https://github.com/futantan/ftt-sensitive-words/issues"
   },
-  "homepage": "https://github.com/futantan/ftt-sensitive-words#readme"
+  "homepage": "https://github.com/futantan/ftt-sensitive-words#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-latest": "^6.24.1"
+  }
 }
